[project]
name = "sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "elasticsearch>=9.2.0",
    "fastapi>=0.120.3",
    "geoip2>=5.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
